<resources>
    <string name="app_name">LabApp</string>
    <string name="main_btn_bottom_navigation">Bottom Navigation</string>
    <string name="main_btn_number">Number</string>
    <string name="main_btn_segmented">Segmented</string>
    <string name="main_btn_viewpager2">Viewpager2</string>

    <string name="navigation_main">Home</string>
    <string name="navigation_find">Find</string>
    <string name="navigation_favorite">Favorite</string>
    <string name="navigation_music">Music</string>
    <string name="navigation_news">News</string>

    <string-array name="segmented_array">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
</resources>
