<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_item_0"
        android:icon="@drawable/ic_home_purple_24dp"
        android:title="@string/navigation_main"/>

    <item
        android:id="@+id/navigation_item_1"
        android:icon="@drawable/ic_search_purple_24dp"
        android:title="@string/navigation_find"/>

    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/ic_bubble_chart_purple_24dp"
        android:title="@string/navigation_favorite"/>

    <item
        android:id="@+id/navigation_item_3"
        android:icon="@drawable/ic_music_note_purple_24dp"
        android:title="@string/navigation_music"/>

    <item
        android:id="@+id/navigation_item_4"
        android:icon="@drawable/ic_create_new_folder_purple_24dp"
        android:title="@string/navigation_news"/>
</menu>
